(lang dune 3.18)

(name ocaml-llhttp)

(generate_opam_files true)

(source
 (github ReallySnazzy/ocaml-llhttp))

(authors "Jonathan Cooper")

(maintainers "Jonathan Cooper")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name ocaml-llhttp)
 (synopsis "OCaml bindings for llhttp")
 (description "OCaml bindings for llhttp")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
